[project]
name = "mazegen"
version = "0.1.0"
description = "A Python module for generating grid-based mazes."
authors = [
    {name = "manzar",email = "manzar@student.1337.ma"},
    {name = "ancheab",email = "ancheab@student.1337.ma"}
]
readme = "README.md"
requires-python = ">=3.10"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools.packages.find]
where = ["."]                   # Search from current directory
include = ["mazegen*"]           # Only include the mazegen package
exclude = ["export_hex_maze*" , "solver*" , "visualizer*"]